<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--For the menu title-->
    <string-array name="product_menu_array">
        <item>Categories</item>
    </string-array>
    <string name="app_name">Omebee</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_account">Account</string>
    <string name="menu_logout">Logout</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>

    <!--For the drawer-->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="search_hint">Search product...</string>
    <string name="empty_search">No matching products.</string>

    <!--For the pull and refresh-->
    <string name="pull_to_refresh_pull_label">Pull to refresh...</string>
    <string name="pull_to_refresh_release_label">Release to refresh...</string>
    <string name="pull_to_refresh_refreshing_label">Loading...</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh...</string>

    <!--For product detail-->
    <string name="add_to_cart_text">Add to Cart</string>
    <!--For categories-->
    <string name="categories_text">Categories</string>
    <string name="search_category">Search category...</string>
    
    <!-- For product filter-->
    <string name="price_text">Price (VND)</string>
    <string name="new_in_text">New in</string>
    <string name="sale_off_text">Sale off</string>
    <string name="apply_text">Apply</string>
    <string name="clear_all_text">Clear All</string>
    <string name="filter_by_text">Filter By</string>

    <!--For progress bar-->
    <string-array name="interpolators">
        <item>Accelerate</item>
        <item>Linear</item>
        <item>AccelerateDecelerate</item>
        <item>Decelerate</item>
    </string-array>
    <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>
    <string-array name="new_in_list">
        <item>All</item>
        <item>Today</item>
        <item>This week</item>
        <item>This month</item>
        <item>This year</item>
    </string-array>
</resources>
