<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/flProductFilterRoot"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:layout_marginRight="@dimen/common_padding_half">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </FrameLayout>
        <RelativeLayout
            android:id="@+id/rlMainProductFilter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:clickable="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@color/white"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/llFilterHeader"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:background="@color/blue">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/ExtremeLargeText"
                        android:text="@string/filter_by_text"
                        android:textColor="@color/white"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/common_padding"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/llPriceFilter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/common_padding"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="@dimen/static_margin_width"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        style="@style/ExtraLargeText"
                        android:text="@string/price_text"/>
                    <FrameLayout
                        android:id="@+id/flPriceFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="80dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="@dimen/common_padding">
                    </FrameLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/llNewInFilter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/common_padding"
                    android:layout_marginLeft="@dimen/common_padding"
                    android:gravity="center_vertical">
                    <TextView
                        android:layout_width="@dimen/static_margin_width"
                        android:layout_height="wrap_content"
                        style="@style/ExtraLargeText"
                        android:text="@string/new_in_text"
                        android:layout_gravity="center_vertical"/>
                    <Spinner
                        android:id="@+id/spNewInFilter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        >
                    </Spinner>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llSaleOffFilter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/common_padding"
                    android:layout_marginLeft="@dimen/common_padding">
                    <TextView
                        android:layout_width="@dimen/static_margin_width"
                        android:layout_height="wrap_content"
                        style="@style/ExtraLargeText"
                        android:text="@string/sale_off_text"
                        android:layout_gravity="center_vertical"/>
                    <RadioGroup
                        android:id="@+id/rgSaleOffFilter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center_vertical">

                        <RadioButton
                            android:id="@+id/rbSaleOffFilterYes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/yes_text" />

                        <RadioButton
                            android:id="@+id/rbSaleOffFilterNo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/common_padding"
                            android:text="@string/no_text" />
                    </RadioGroup>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/llControlFilter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/common_padding_double"
                    android:layout_marginBottom="@dimen/common_padding_double">

                    <com.omebee.android.layers.ui.components.views.material.MaterialRippleView
                        android:id="@+id/flApplyFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/common_padding_double"
                        android:paddingRight="@dimen/common_padding_double"
                        android:paddingTop="@dimen/common_padding"
                        android:paddingBottom="@dimen/common_padding"
                        android:clickable="true"
                        android:background="@color/blue">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/ExtraLargeText"
                            android:textColor="@color/white"
                            android:text="@string/apply_text"
                            android:layout_gravity="center"/>
                    </com.omebee.android.layers.ui.components.views.material.MaterialRippleView>
                    <com.omebee.android.layers.ui.components.views.material.MaterialRippleView
                        android:id="@+id/flClearAllFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/common_padding_double"
                        android:paddingRight="@dimen/common_padding_double"
                        android:paddingTop="@dimen/common_padding"
                        android:paddingBottom="@dimen/common_padding"
                        android:layout_marginLeft="@dimen/common_padding"
                        android:clickable="true"
                        android:background="@color/blue">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/ExtraLargeText"
                            android:textColor="@color/white"
                            android:text="@string/clear_all_text"
                            android:layout_gravity="center"/>
                    </com.omebee.android.layers.ui.components.views.material.MaterialRippleView>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>